edit profile is fully working

--- a/src/app/main/farming-method-screen/add/modal/modal.component.html
+++ b/src/app/main/farming-method-screen/add/modal/modal.component.html
@@ -1,6 +1,9 @@
 <div class="add-modal__header-button">
   <div class="add-modal__header-button--cancel" (click)="cancel()">Cancel</div>
-  <div class="add-modal__header-button--add" (click)="confirm()">Add</div>
+  <div class="add-modal__header-button--add" *ngIf="agriDetails.name &&
+  agriDetails.hectares &&
+  farmingMethod.title &&
+  farmingMethod.message" (click)="confirm()">Add</div>
 </div>
 <ion-content class="ion-padding">
   <div class="add-modal">
