--- a/src/app/main/home-screen/home-screen.page.html
+++ b/src/app/main/home-screen/home-screen.page.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header [class.darkmode]="isDarkMode">
+  <ion-toolbar [class.darkmode]="isDarkMode">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
