--- a/src/app/main/community-screen/community-screen.page.scss
+++ b/src/app/main/community-screen/community-screen.page.scss
@@ -111,11 +111,12 @@
   &__images {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
   }
   &__img {
     object-fit: cover;
     height: 100%;
+    width: 100%;
   }
   &__content {
     margin-bottom: 2rem;
