--- a/src/app/main/profile-screen/my-methods/my-methods.page.html
+++ b/src/app/main/profile-screen/my-methods/my-methods.page.html
@@ -17,7 +17,8 @@
       <h3>Livestock</h3>
       <app-card-method *ngFor="let name of livestockName" [userImg]="userImg"
         [name]="name.charAt(0).toUpperCase() + name.slice(1)"
-        [cardColor]="setColor('livestock',livestockName.indexOf(name))" [icon]="setIcon(name)" [userId]="_userId">
+        [cardColor]="setColor('livestock',livestockName.indexOf(name))" [icon]="setIcon(name)"
+        [methods]="userFarmingMethod[name.toLowerCase()]" [userName]="userName" [userId]="_userId">
       </app-card-method>
 
 
