--- a/src/app/main/community-screen/community-screen.page.html
+++ b/src/app/main/community-screen/community-screen.page.html
@@ -50,9 +50,10 @@
               <div class="card__content">
                 <p class="card__content--message">{{post.message}}</p>
               </div>
-              <div class="comment">
-                <ion-input placeholder="Write a comment"></ion-input>
+              <div class="comment" (click)="commentsClickHandler(post.postId)">
                 <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+                <span class="comment__text">Comment</span>
+                <span class="comment__count">12</span>
               </div>
             </div>
           </ion-col>
