--- a/src/app/main/community-screen/community-screen.page.html
+++ b/src/app/main/community-screen/community-screen.page.html
@@ -52,8 +52,8 @@
               </div>
               <div class="comment" (click)="commentsClickHandler(post.postId)">
                 <ion-icon name="chatbox-ellipses-outline"></ion-icon>
-                <span class="comment__text">Comment</span>
-                <span class="comment__count">12</span>
+                <span class="comment__text">Comments</span>
+                <span class="comment__count">{{post.comment.length}}</span>
               </div>
             </div>
           </ion-col>
