--- a/src/app/main/farming-method-screen/add/add.page.scss
+++ b/src/app/main/farming-method-screen/add/add.page.scss
@@ -15,6 +15,12 @@
     font-size: 4rem;
     font-weight: bold;
   }
+  &__added-img {
+    width: 100%;
+    height: 20rem;
+    object-fit: cover;
+    margin-top: 4rem;
+  }
   &__back {
     color: #ffffff;
     text-align: left;
