--- a/src/app/main/farming-method-screen/edit/edit.page.html
+++ b/src/app/main/farming-method-screen/edit/edit.page.html
@@ -5,6 +5,13 @@
 
 <ion-content class="ion-padding">
   <ion-list class="edit__input-field">
+    <div class="edit__add-image">
+      <ion-icon *ngIf="selectedImage" class="edit__delete-icon" name="close-circle-sharp"
+        (click)="deleteImgClickHandler()">
+      </ion-icon>
+      <img [src]="selectedImage" alt="" class="edit__img" *ngIf="selectedImage">
+      <ion-button style="margin-bottom:2.4rem" color="dark" (click)="addImageClickHandler()">Add Image</ion-button>
+    </div>
     <ion-item>
       <ion-label position="floating">Title</ion-label>
       <ion-input [value]="title" [(ngModel)]="title"></ion-input>
