--- a/src/app/main/farming-method-screen/edit/edit.page.scss
+++ b/src/app/main/farming-method-screen/edit/edit.page.scss
@@ -24,3 +24,25 @@ input {
   padding: 1.5rem;
   color: #ffffff;
 }
+
+.edit__img {
+  width: 100%;
+  height: 20rem;
+  object-fit: cover;
+}
+
+.edit__add-image {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  position: relative;
+}
+
+.edit__delete-icon {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  color: #d9534f;
+  font-size: 2.4rem;
+  box-shadow: rgba(99, 99, 99, 0.5) 0px 2px 8px 0px;
+}
