add picture is working

--- a/src/app/main/farming-method-screen/card-item/card-item.component.html
+++ b/src/app/main/farming-method-screen/card-item/card-item.component.html
@@ -13,6 +13,7 @@
     <p>{{farmingMethod.methods[0].title}}</p>
   </div>
   <div class="card-item__last">
+    <img class="card_item__img-post" [src]="farmingMethod.img" alt="">
     <div class="card-item__last-name">{{farmingMethod.name}}
     </div>
     <div class="card-item__last-hectares">{{farmingMethod.hectares}} ha</div>
