--- a/src/app/main/farming-method-screen/details/details.page.html
+++ b/src/app/main/farming-method-screen/details/details.page.html
@@ -38,7 +38,6 @@
               <div class="farming-method-details__heading--details--saveIcon" (click)="saveClickHandler()">
                 <ion-icon name="heart-outline" *ngIf="!isSaved"></ion-icon>
                 <ion-icon name="heart" *ngIf="isSaved"></ion-icon>
-
               </div>
             </div>
           </div>
@@ -47,6 +46,7 @@
       <ion-row>
         <ion-col>
           <div class="farming-method-details__content" *ngFor="let method of farmingMethod.methods">
+            <img [src]="method['img']" alt="" class="farming-method-details__img">
             <app-title [title]="method['title']"></app-title>
             <app-message [message]="method['message']"></app-message>
             <div class="border-line"></div>
