comment in community page fixed bug

--- a/src/app/main/community-screen/comment/comment.page.html
+++ b/src/app/main/community-screen/comment/comment.page.html
@@ -9,7 +9,7 @@
   <div class="border-line" style="margin-top:2rem"></div>
   <div class="user-post">
     <div class="user-post__header">
-      <img class="user-post__profile" [src]="user?.imgUrl" alt="">
+      <img class="user-post__profile" [src]="post?.userImg" alt="">
       <div class="user-post__details">
         <h3 class="user-post__name">{{post.fullName}}</h3>
         <span class="user-post__time">2 hours ago</span>
