change profile page ui

--- a/src/app/main/profile-screen/profile-screen.page.html
+++ b/src/app/main/profile-screen/profile-screen.page.html
@@ -1,6 +1,7 @@
 <ion-content *ngIf="user">
+  <app-page-header title="Profile"></app-page-header>
+  <img class="profile__background-image" src="assets/img/profile/profile-background.png" alt="">
   <div class="profile ion-padding">
-    <app-page-header title="Profile"></app-page-header>
 
     <ion-grid>
       <ion-row>
@@ -10,6 +11,7 @@
           </div>
           <label
             class="profile__name">{{user?.firstName.charAt(0).toUpperCase() + user?.firstName.slice(1) + " " + user?.lastName.charAt(0).toUpperCase() + user?.lastName.slice(1)}}</label>
+          <p style="color:#a7a7a7;font-size:14px">{{user?.email}}</p>
         </ion-col>
       </ion-row>
       <ion-row>
@@ -50,7 +52,7 @@
       </ion-row>
       <ion-row>
         <ion-col size-sm="8" offset-sm="2">
-          <app-button class="danger" name="Log out"></app-button>
+          <app-button class="danger" name="Log out" (click)="logoutClickHandler()"></app-button>
         </ion-col>
       </ion-row>
     </ion-grid>
