--- a/src/app/main/farming-method-screen/details/details.page.scss
+++ b/src/app/main/farming-method-screen/details/details.page.scss
@@ -1,9 +1,10 @@
 .farming-method-details {
   &__img {
     width: 100%;
-    object-fit: cover;
-    height: auto;
-    margin-top: 3rem;
+    object-fit: fill;
+    height: 25rem;
+    margin-top: 5rem;
+    border-radius: 1rem;
   }
   &__header {
     height: 15rem;
