--- a/src/app/main/profile-screen/profile-screen.page.scss
+++ b/src/app/main/profile-screen/profile-screen.page.scss
@@ -1,19 +1,24 @@
 .profile {
   color: #2e322f;
+  &__background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
   &__user {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    margin-top: 5.5rem;
   }
   &__name {
     font-size: 2.4rem;
     font-weight: 700;
-    margin-top: 1.4rem;
+    margin-top: 1rem;
   }
   &__img {
-    width: 12rem;
-    height: 12rem;
+    width: 8rem;
+    height: 8rem;
     background-color: #2e322f;
     border-radius: 100%;
     &--avatar {
@@ -21,10 +26,12 @@
       height: 100%;
       object-fit: cover;
       border-radius: 100%;
+      box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+      outline: 4px white solid;
     }
   }
   &__account {
-    margin-top: 5.2rem;
+    margin-top: 3.2rem;
     &--title {
       color: #79897c;
       font-size: 1.8rem;
