--- a/src/app/main/community-screen/community-screen.page.html
+++ b/src/app/main/community-screen/community-screen.page.html
@@ -7,7 +7,7 @@
     </ion-refresher>
     <div class="community__header">
       <div class="community__avatar">
-        <img class="community__avatar--img" src="assets/img/jake.jpg" alt="">
+        <img class="community__avatar--img" [src]="user.imgUrl" alt="">
         <span class="community__avatar--post">2 posts</span>
       </div>
       <ion-searchbar class="community__searchbar" mode="ios" color="light"></ion-searchbar>
